[gd_scene load_steps=2 format=3 uid="uid://cad1bobvd1j1e"]

[ext_resource type="Script" path="res://Menus/lobby_menu.gd" id="1_yctm1"]

[node name="LobbyMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yctm1")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 56.0
offset_right = 296.0
offset_bottom = 82.0
text = "Name"

[node name="ServerIPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 249.0
offset_top = 112.0
offset_right = 296.0
offset_bottom = 138.0
text = "Server"

[node name="NameEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 311.0
offset_top = 55.0
offset_right = 565.0
offset_bottom = 86.0

[node name="ServerIPEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 311.0
offset_top = 110.0
offset_right = 565.0
offset_bottom = 141.0

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 582.0
offset_top = 56.0
offset_right = 626.0
offset_bottom = 87.0
text = "Host"

[node name="DisconnectButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 308.0
offset_top = 159.0
offset_right = 402.0
offset_bottom = 190.0
text = "Disconnect"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 585.0
offset_top = 110.0
offset_right = 623.0
offset_bottom = 141.0
text = "Join"

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 469.0
offset_top = 160.0
offset_right = 565.0
offset_bottom = 191.0
disabled = true
text = "Start Game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 824.0
offset_top = 36.0
offset_right = 1275.0
offset_bottom = 354.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Players"

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="text_changed" from="NameEdit" to="." method="_on_name_text_changed"]
[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="DisconnectButton" to="." method="_on_disconnect_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
